--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
+coverage==7.8.2
 cryptography==45.0.3
 firebase-admin==6.8.0
 Flask==3.1.1
@@ -38,6 +39,7 @@ pycparser==2.22
 PyJWT==2.10.1
 pyparsing==3.2.3
 pytest==8.3.5
+pytest-cov==6.1.1
 requests==2.32.3
 rsa==4.9.1
 uritemplate==4.1.1
