Test to compelte the firestore db testing. Added the crednetial sot the python ci file and made a new pytyhon test file.

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -27,6 +27,11 @@ jobs:
         pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Add Firebase credentials file
+      run: |
+        mkdir -p credentials
+        echo "${{ secrets.FIREBASE_CREDENTIALS }}" > credentials/firebase_key.json
+
     - name: Run tests with pytest
       run: |
         source venv/bin/activate
