--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -36,4 +36,4 @@ jobs:
     - name: Run tests with pytest
       run: |
         source venv/bin/activate
-        pytest
+        pytest -v --durations=10
