--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -31,3 +31,8 @@ jobs:
       run: |
         source venv/bin/activate
         pytest
+    
+    - name: Run tests with coverage
+      run: |
+        source venv/bin/activate
+        pytest --cov=tests --cov-report=term-missing --cov-fail-under=80
