--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -38,4 +38,5 @@ jobs:
 
     - name: Run tests with pytest and coverage
       run: |
+        source venv/bin/activate
         pytest --cov=app -v --durations=10
