--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
+coverage==7.9.1
 cryptography==45.0.3
 cssselect==1.3.0
 firebase-admin==6.8.0
@@ -43,10 +44,12 @@ protobuf==5.29.4
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
+Pygments==2.19.2
 PyJWT==2.10.1
 pyparsing==3.2.3
 pyquery==2.0.1
 pytest==8.3.5
+pytest-cov==6.2.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.3
