--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ firebase-admin==6.8.0
 Flask==3.1.1
 Flask-WTF==1.2.2
 future==1.0.0
+gcloud==0.18.3
 google-api-core==2.24.2
 google-api-python-client==2.170.0
 google-auth==2.40.2
@@ -31,11 +32,13 @@ idna==3.10
 iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jwcrypto==1.5.6
 lxml==5.4.0
 macholib==1.16.3
 MarkupSafe==3.0.2
 msgpack==1.1.0
 numpy==2.3.0
+oauth2client==4.1.3
 packaging==25.0
 pandas==2.3.0
 pluggy==1.6.0
@@ -44,19 +47,25 @@ protobuf==5.29.4
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
+pycryptodome==3.23.0
 Pygments==2.19.2
 PyJWT==2.10.1
 pyparsing==3.2.3
 pyquery==2.0.1
+Pyrebase4==4.8.0
 pytest==8.3.5
 pytest-cov==6.2.1
 python-dateutil==2.9.0.post0
+python-jwt==4.1.0
 pytz==2025.2
 requests==2.32.3
+requests-toolbelt==0.10.1
 rsa==4.9.1
+setuptools==66.1.1
 six==1.17.0
+typing_extensions==4.14.0
 tzdata==2025.2
 uritemplate==4.1.1
-urllib3==2.4.0
+urllib3==1.26.20
 Werkzeug==3.1.3
 WTForms==3.2.1
