--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 altgraph==0.17.4
+attrs==25.3.0
 beautifulsoup4==4.13.4
 blinker==1.9.0
 CacheControl==0.14.3
 cachetools==5.5.2
-certifi==2025.4.26
+certifi==2025.7.14
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
@@ -28,6 +29,7 @@ google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
 grpcio==1.71.0
 grpcio-status==1.71.0
+h11==0.16.0
 httplib2==0.22.0
 idna==3.10
 iniconfig==2.1.0
@@ -40,6 +42,7 @@ MarkupSafe==3.0.2
 msgpack==1.1.0
 numpy==2.3.0
 oauth2client==4.1.3
+outcome==1.3.0.post0
 packaging==25.0
 pandas==2.3.0
 pluggy==1.6.0
@@ -53,6 +56,7 @@ Pygments==2.19.2
 PyJWT==2.10.1
 pyparsing==3.2.3
 pyquery==2.0.1
+PySocks==1.7.1
 pytest==8.3.5
 pytest-cov==6.2.1
 python-dateutil==2.9.0.post0
@@ -61,12 +65,18 @@ pytz==2025.2
 requests==2.32.3
 requests-toolbelt==0.10.1
 rsa==4.9.1
-setuptools==66.1.1
+selenium==4.34.2
 six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 soupsieve==2.7
+trio==0.30.0
+trio-websocket==0.12.2
 typing_extensions==4.14.0
 tzdata==2025.2
 uritemplate==4.1.1
-urllib3==1.26.20
+urllib3==2.5.0
+websocket-client==1.8.0
 Werkzeug==3.1.3
+wsproto==1.2.0
 WTForms==3.2.1
