--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ cryptography==45.0.3
 cssselect==1.3.0
 firebase-admin==6.8.0
 Flask==3.1.1
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 future==1.0.0
 gcloud==0.18.3
@@ -70,6 +72,7 @@ six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.7
+SQLAlchemy==2.0.41
 trio==0.30.0
 trio-websocket==0.12.2
 typing_extensions==4.14.0
