--- a/requirements.txt
+++ b/requirements.txt
@@ -65,6 +65,7 @@ python-dateutil==2.9.0.post0
 python-jwt==4.1.0
 pytz==2025.2
 requests==2.32.3
+requests-mock==1.12.1
 requests-toolbelt==0.10.1
 rsa==4.9.1
 selenium==4.34.2
