--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ idna==3.10
 iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+joblib==1.5.1
 jwcrypto==1.5.6
 lxml==5.4.0
 macholib==1.16.3
@@ -68,12 +69,15 @@ requests==2.32.3
 requests-mock==1.12.1
 requests-toolbelt==0.10.1
 rsa==4.9.1
+scikit-learn==1.7.1
+scipy==1.16.1
 selenium==4.34.2
 six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.7
 SQLAlchemy==2.0.41
+threadpoolctl==3.6.0
 trio==0.30.0
 trio-websocket==0.12.2
 typing_extensions==4.14.0
